--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,30 @@
-body {
+:root {
   --font: 'Kanit', sans-serif;
 }
 
+body {
+  background-color: #fafafa;
+  max-width: 100%;
+  margin: 0 auto;
+}
+body, html {
+  height: 100%;
+}
+
+.container {
+  max-width: 600px;
+  margin: 20px auto;
+  padding-bottom: 40px;
+}
 h1, h2 {
   font-family: var(--font);
 }
 .graf svg {
     overflow: visible;
+}
+.graf text {
+  font-family: var(--font);
+  font-size: .7rem;
 }
 
 .axis {
@@ -14,10 +32,11 @@ h1, h2 {
 }
 
 .graf {
-  margin-bottom:20px;
+  margin-bottom:60px;
   margin-top:-40px;
   max-width: 600px;
   color: #666;
+  
 }
 
 .line {
@@ -38,27 +57,28 @@ h1, h2 {
 
 .introtext, .valuedisplay {
   font-family: var(--font);
+  
 }
 
 .introtext {
-  font-size: 13px;
+  font-size: .9rem;
 }
 
 .grafbtn {
   margin: 0 auto;
   //width: 80px;
-  line-height: 1em;
+  line-height: 1;
   background-color: #e7e7e7; 
   color: black;
   border: none;
   border-radius: 4px;
-  padding: 8px 12px 6px;
+  padding: 6px 12px 8px;
   margin-top: 80px;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
   display: block;
-  font-size: 14px;
+  font-size: 1rem;
   font-family: var(--font);
   opacity: .8;
   transition: opacity .2s;
