--- a/src/style.scss
+++ b/src/style.scss
@@ -13,8 +13,9 @@ body, html {
 
 .container {
   max-width: 600px;
-  margin: 20px auto;
-  padding-bottom: 40px;
+  margin: 0 auto;
+  padding: 10px 15px 40px;
+  //overflow: hidden;
 }
 h1, h2 {
   font-family: var(--font);
@@ -32,8 +33,9 @@ h1, h2 {
 }
 
 .graf {
-  margin-bottom:60px;
-  margin-top:-40px;
+  //margin-bottom:60px;
+  //margin-top:-40px;
+  padding-bottom: 40px;
   max-width: 600px;
   color: #666;
   
@@ -73,7 +75,6 @@ h1, h2 {
   border: none;
   border-radius: 4px;
   padding: 6px 12px 8px;
-  margin-top: 80px;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
@@ -82,6 +83,7 @@ h1, h2 {
   font-family: var(--font);
   opacity: .8;
   transition: opacity .2s;
+  transform: translate(0, 40px);
   cursor: pointer;
   &:hover {
     opacity: 1;
